--- a/packages/core/public/dev.css
+++ b/packages/core/public/dev.css
@@ -298,6 +298,13 @@ section {
     bottom: 0;
 }
 
+#message {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    place-items: center
+}
+
 /* iOS */
 @supports (-webkit-touch-callout: none) {
     #node li img {
