@slidy/core - sync img + thumbs

--- a/packages/core/public/dev.css
+++ b/packages/core/public/dev.css
@@ -291,6 +291,10 @@ section {
     background-blend-mode: normal;
 }
 
+img {
+    object-fit: cover;
+}
+
 #node li:before {
     content: attr(id);
     position: absolute;
