@slidy/element - fix dev api

--- a/packages/element/public/dev.css
+++ b/packages/element/public/dev.css
@@ -42,7 +42,7 @@ section#s1 {
     max-height: 300px;
 }
 
-section#s1 > * {
+section#s1>* {
     flex: 1 0 50%;
     /* width: 50%; */
 }
@@ -54,9 +54,9 @@ section#s4 {
     display: flex;
 }
 
-section#s2 > *,
-section#s3 > *,
-section#s4 > * {
+section#s2>*,
+section#s3>*,
+section#s4>* {
     flex: 1 0 30%;
 }
 
@@ -143,7 +143,7 @@ form {
     flex-wrap: wrap;
 }
 
-form > * {
+form>* {
     display: flex;
 }
 
@@ -277,8 +277,8 @@ section {
     padding: var(--gap, 1rem) 0;
 }
 
-#node > *,
-#thumbs > * {
+#node>*,
+#thumbs>* {
     max-width: 85%;
     box-shadow: var(--shadow-3);
     background: var(--surface-1);
@@ -301,6 +301,11 @@ section {
 #thumbs button.active {
     opacity: 1;
     background-blend-mode: normal;
+}
+
+img {
+    object-fit: cover;
+    height: 100%;
 }
 
 /* ICONS */
