--- a/assets/styles/slidy.module.css
+++ b/assets/styles/slidy.module.css
@@ -34,11 +34,11 @@
     );
 }
 
-.slidy:not([aria-orientation="vertical"]).groups .slidy-slides {
+.slidy:not([aria-orientation='vertical']).groups .slidy-slides {
     --slidy-slide-width: var(--_slidy-group-item-size);
 }
 
-.slidy[aria-orientation="vertical"].groups .slidy-slides {
+.slidy[aria-orientation='vertical'].groups .slidy-slides {
     --slidy-slide-height: var(--_slidy-group-item-size);
 }
 
@@ -111,7 +111,7 @@
 
 /* mode::vertical */
 
-.slidy[aria-orientation="vertical"] {
+.slidy[aria-orientation='vertical'] {
     display: grid;
     grid-template: auto minmax(0, 1fr) repeat(3, auto) / minmax(0, 1fr) auto;
     grid-template-areas:
@@ -124,7 +124,7 @@
     width: var(--slidy-width, 100%);
 }
 
-.slidy[aria-orientation="vertical"] > .slidy-slides {
+.slidy[aria-orientation='vertical'] > .slidy-slides {
     grid-row: 1 / -3;
     grid-column: 1;
 
@@ -133,12 +133,12 @@
     height: var(--slidy-slides-height, auto);
 }
 
-.slidy[aria-orientation="vertical"] > .slidy-nav {
+.slidy[aria-orientation='vertical'] > .slidy-nav {
     width: auto;
     height: max-content;
 }
 
-.slidy[aria-orientation="vertical"] .slidy-img {
+.slidy[aria-orientation='vertical'] .slidy-img {
     width: 100%;
     height: 100%;
 }
