timer does not resume after stop, but anim work

--- a/assets/styles/button-autoplay.module.css
+++ b/assets/styles/button-autoplay.module.css
@@ -61,6 +61,10 @@
     animation: slidy-autoplay-indicator var(--slidy-autoplay-interval) linear forwards infinite;
 }
 
+.slidy-autoplay-indicator.paused {
+    animation-play-state: paused;
+}
+
 @keyframes slidy-autoplay-indicator {
     to {
         stroke-dashoffset: 0;
