--- a/packages/solid/public/global.css
+++ b/packages/solid/public/global.css
@@ -18,7 +18,8 @@ body {
     color: var(--color);
     background-color: var(--surface-1);
     line-height: 1.4;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    font-family:
+        -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
         'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
