--- a/www/src/routes/docs/[section]/docs.module.css
+++ b/www/src/routes/docs/[section]/docs.module.css
@@ -22,6 +22,7 @@
 	position: sticky;
 	top: 0;
 	height: 100vh;
+    width: max-content;
 	border-right: var(--border-size-2) solid var(--surface-3);
 	box-shadow: var(--shadow-1);
 	margin-right: var(--size-4);
